--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first website</title>
+    <style>
+
+
+
+
+    </style>
 </head>
 <body>
     <h1>My fisrt ever website</h1>
-    <h3>Hi You know what yoy did to me </h3>
-    <p> ami tmk love kori shundory</p>
-    <p>tmi ki amr hobna </p>
-    <p>amr nijer proti arw daittoban howa ucjhit</p>
+    <h1>Hi You know what yoy did to me </h1>
+    <h1 class="special-effect"> vhodro pula </h1>
+    <input name="email" type="text">
+    <br>
+    <input name="password" type="text">
+    <br>
+    <a href="www.youtube.com">youtube</a>
+    <a href="www.facbook.com">facebook</a>
+    
     <button> click me </button>
     <br>
     <p>ami tmk love kori kmne bujhabo </p>
