--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first website</title>
     <style>
-
+        h1{
+            color: gold;
+        }
+        .special-effect:hover{
+            color: blue;
+            font-size: 60px;
+            background-color: black;
+        }
 
 
 
