--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@
             font-size: 60px;
             background-color: black;
         }
+        .my{
+            text-align: center;
+            font-size: 30px;
+            color: brown;
+            
+        }
+
 
 
 
     </style>
 </head>
 <body>
-    <h1>My fisrt ever website</h1>
+    <h1 class="my">My fisrt ever website</h1>
     <h1>Hi You know what yoy did to me </h1>
     <h1 class="special-effect"> vhodro pula </h1>
     <input name="email" type="text">
