--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             text-align: center;
             font-size: 30px;
             color: brown;
-            
+
         }
 
 
@@ -44,6 +44,17 @@
     <p>ami tmk love kori kmne bujhabo </p>
     <br>
     <p>tmr ki eknw amk mone pore </p>
+    <Ul>
+        <li>Hazzad</li>
+        <li>rohim</li>
+        <li>korim</li>
+        <li>natasha</li>
+        <li>ali</li>
+        
+
+
+
+    </Ul>
 
 
 </body>
