--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
             color: brown;
 
         }
+        a:link{
+            color: aqua;
 
-
+        }
+        a:hover{
+            color: blue;
+            font-size: 30px;
+        }
 
 
     </style>
@@ -50,10 +56,6 @@
         <li>korim</li>
         <li>natasha</li>
         <li>ali</li>
-        
-
-
-
     </Ul>
 
 
