--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
             color: blue;
             font-size: 30px;
         }
-
+        input:focus{
+            color: blue;
+            border: 5ps;
+        }
 
     </style>
 </head>
