--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
             font-size: 30px;
         }
         input:focus{
-            color: blue;
-            border: 5ps;
+            color: blue
+            
+            
         }
 
     </style>
