--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
         input:focus{
             color: blue
             
-            
         }
-
+        li:nth-child(2){
+            color: blue;
+        }
     </style>
 </head>
 <body>
