--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <h1 class="my">My fisrt ever website</h1>
-    <h1>Hi You know what yoy did to me </h1>
+    <h1> welcom to my website </h1>
     <h1 class="special-effect"> vhodro pula </h1>
     <input name="email" type="text">
     <br>
@@ -47,21 +47,21 @@
     <br>
     <a href="www.youtube.com">youtube</a>
     <br>
-    <a href="www.facbook.com">facebooka</a>
+    <a href="www.facbook.com">facebook</a>
     <br>
     
     <button> click me </button>
     <br>
-    <p>ami tmk love kori kmne bujhabo </p>
+    <p>ami kaw k love korina</p>
     <br>
-    <p>tmr ki eknw amk mone pore </p>
-    <Ul>
+    <p>tmi j amr chin chin chin </p>
+    <ul>
         <li>Hazzad</li>
         <li>rohim</li>
         <li>korim</li>
         <li>natasha</li>
         <li>ali</li>
-    </Ul>
+    </ul>
 
 
 </body>
